2010-11-22  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/dds/writer.hpp: Added support for writing using stream operators.

	* demo/ishapes/ishape.idl: Moved color to be the first attribute
	in the structure.

2010-10-19  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/dds/types.hpp: 
	Added type-defs for dds::Duration and dds::Time.

	* src/dds/runtime.hpp: 
	* src/dds/runtime.cpp: 
	* src/dds/peer/runtime_impl.cpp: 
	Refactored ctors to have now the default partition as a default value.

	* src/dds/reader.hpp:
	* src/dds/peer/reader_impl.hpp:
	* src/dds/peer/writer_impl.hpp: Added support for explicitely
	setting the Publisher/Subscriber when creating the
	DataReader/DataWriter. This allows now to have
	DataReader/DataWriter connceted to different partitions than those
	used by the SimD runtime.

	* demo/tweet/CMakeLists.txt: 
	* demo/hello/hello-sub.cpp: 
	* demo/hello/hello-pub.cpp: 

	Expanded example to show the use of the extended
	DataReader/DataWriter ctor to set Publisher/Subscriber.
	
	* demo/ddj-series/03/CMakeLists.txt: 
	* demo/ddj-series/02/CMakeLists.txt: 
	* demo/ddj-series/01/CMakeLists.txt: 
	Updated to reflect the use of the CMake built-in FindBoost.

2010-10-13  Angelo Corsaro  <angelo.corsaro@gmail.com>
	* SimD v0.9 Release
	
	* demo/latency/latency-pub.cpp: 
	* demo/latency/latency-sub.cpp: 

	Remove use of C++0x auto keyword.
	
2010-10-12  Angelo Corsaro  <angelo.corsaro@gmail.com>
	
	* src/dds/reader.hpp: 
	* src/dds/peer/reader_impl.hpp: 
	Fixed issue #20
	* demo/ping/ping-sub.cpp: 	
	* cmake/osmacros.cmake: 

	Removed dependency from C++0x extensions.

2010-10-11  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/dds/peer/reader_impl.hpp: 
	* src/dds/reader.hpp: 
	  Fixed issue #20
	
	* src/dds/peer/reader_impl.hpp: Fixed issue #18.
	
	* demo/ishapes/ShapesDialog.cpp: Extended support for filtering to
	include the inside as well as the outsize of the filtering
	rectangle.
	
	* demo/latency: Added latency test for SimD. 
